Anirudh & Nicolette | #7 | refactor landing page scss to seperate sections, make each section background full bleed, fix carousel to work well with full bleed styling

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,8 +1,8 @@
-/* header */ 
 
 .navbar {
 	font-size: 20px;
 	text-transform: uppercase;
+	margin-bottom: 0; 
 }
 .navbar-brand, .nav-links {
 	color: $black;
