--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,171 +22,11 @@
 
 html {
 	height: 100%;
+	width: 101%;
+
 }
 body {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
     height: 100%;
-}
-
-/* navigation */ 
-
-.navbar {
-	font-size: 20px;
-	text-transform: uppercase;
-}
-
-.navbar-brand, .nav-links {
-	color: grey;
-}
-
-/* jumbotron styling */
-
-h1#dashtag_logo {
-	color: white; 
-	font-size: 120px;
-	text-transform: uppercase;
-}
-.jumbotron {
-	background-color: #28B3C7;
-}
-
-/* carousel styling*/
-
-#myCarousel {
-	background-color: #AD0F5E;
-}
-.item {
-	height: 460px;
-	width: 1020px;
-}
-.carousel-inner {
-	margin-top: 60px;
-}
-.carousel-control.left, .carousel-control.right {
-    background-image: none
-}
-p.carousel_main_text {
-	 color: #fff;
-	 padding: 60px 160px 0 160px; 
-	 font-size: 35px; 
-}
-
-/*second_section*/
-
-.second_section {
-	background-color: #D03F95;
-	border-radius: 6px; 
-	color: #fff;
-}
-.section_header {
-	font-size: 70px; 
-	padding-bottom: 30px; 
-	padding-top: 40px;
-	font-weight: bold;
-	text-align: center;
-}
-.numberCircle {
-    border-radius: 50%;
-    width: 50px;
-    height: 56px;
-    padding: 8px;
-    border: 2px solid #fff;
-    color: #fff;
-    text-align: center;
-    font: 32px Indie Flower, sans-serif;
-    display: inline-block;
-}
-.social_media_icons{
-	width: 180px; 
-	height: 180px;
-	margin-right: 60px;
-}
-.social_media_name {
-	text-transform: uppercase;
-}
-.social_media_text { 
-	font-size: 16px;
-	padding-bottom: 20px;
-	padding-left: 40px;
-	padding-right: 60px;
-}
-#twitter_text {
-	padding-left: 40px;
-}
-p.note {
-	padding-bottom: 40px;
-	font-size: 12px;
-}
-
-/* third section */
-
-.third_section {
-	background-color: #EE9D59;
-	border-radius: 6px; 
-	color: #fff;
-	padding-bottom: 160px;
-}
-.third_section_items {
-	display: inline;
-}
-.social_media_api {
-	background-color: #fff;
-	color: #EE9D59;
-	font-size: 30px;
-	padding: 20px 20px 20px 20px;
-}
-#get_access {
-	margin-left: 50px;
-}
-#and_or {
-	margin-left: 20px;
-	margin-right: 20px;
-	font-size: 30px;
-}
-.instagram_api {
-	float: right;
-}
-
-/* last_section */
-
-.last_section {
-	background-color: #B8C447;
-	border-radius: 6px; 
-	color: #fff;
-	padding-bottom: 30px;
-}
-.solid_border {
-	 border: 5px solid #fff;
-	 margin-top: 20px;
-	 margin-left: 60px;
-	 margin-right: 60px;
-	 margin-bottom: 60px;
-	 padding-left: 60px;
-	 padding-right: 60px;
-	 padding-bottom: 60px;
-	 padding-top: 60px;
-}
-.last_section_para {
-	font-size: 30px;
-	text-align: center;
-}
-.uppercase {
-	text-transform: uppercase;
-}
-.btn {
-	margin-left: 140px; 
-	margin-top: 20px;
-}
-.btn-lg {
-	background-color: #7158B8; 
-	padding: 15px 30px 15px 30px;
-}
-.btn-lg:hover {
-	background-color: #8c75d1; 
-}
-#login {
-	color: #fff; 
-	text-decoration: none; 
-	font-size: 40px;
 }
