--- a/app/assets/stylesheets/dashtag_landing_page.scss
+++ b/app/assets/stylesheets/dashtag_landing_page.scss
@@ -1,159 +1,15 @@
-/* jumbotron styling */
+@import "carousel_section";
+@import "signup_section";
+@import "get_api_section";
+@import "launch_section";
+
+
 .landing-page-container {
 	height: 100%;
 	min-height: 880px;	
 	position: relative;
 }
-.landing-page-centered-content {
-	position: absolute; 
-	top: 30%;	
-}
-h1#dashtag_logo {
-	color: $white; 
-	font-size: 120px;
-	text-transform: uppercase;
-}
-.jumbotron {
-	background-color: $jumbotron-background-color;
-	height: 100%; 
-}
-
-/* carousel styling*/
-
-#myCarousel {
-	background-color: $carousel-color;	
-}
-.item {
-	height: 460px;
-	width: 1020px;
-}
-.carousel-inner {
-	margin-top: 60px;
-}
-.carousel-control.left, .carousel-control.right {
-    background-image: none
-}
-p.carousel_main_text {
-	 color: $white;
-	 padding: 60px 160px 0 160px; 
-	 font-size: 35px; 
-}
-
-/*second_section*/
-
-.what-do-i-need-container {
-	background-color: $what-do-i-need-color;
-	border-radius: 6px; 
-	color: $white;
-}
-.section_header {
-	font-size: 70px; 
-	padding-bottom: 30px; 
-	padding-top: 40px;
-	font-weight: bold;
-	text-align: center;
-}
-.numberCircle {
-    border-radius: 50%;
-    width: 50px;
-    height: 56px;
-    padding: 8px;
-    border: 2px solid #fff;
-    color: $white;
-    text-align: center;
-    font: 32px Indie Flower, sans-serif;
-    display: inline-block;
-}
-.social_media_icons{
-	width: 180px; 
-	height: 180px;
-	margin-right: 60px;
-}
-.social_media_name {
-	text-transform: uppercase;
-}
-.social_media_text { 
-	font-size: 16px;
-	padding-bottom: 20px;
-	padding-left: 40px;
-	padding-right: 60px;
-}
-#twitter_text {
-	padding-left: 40px;
-}
-p.note {
-	padding-bottom: 40px;
-	font-size: 12px;
-}
-
-/* third section */
-
-.got-it-container {
-	background-color: $get-access-to-api-color;
-	border-radius: 6px; 
-	color: $white;
-	padding-bottom: 160px;
-}
-.third_section_items {
-	display: inline;
-}
-.social_media_api {
-	background-color: $white;
-	color: $get-access-to-api-color;
-	font-size: 30px;
-	padding: 20px 20px 20px 20px;
-}
-#get_access {
-	margin-left: 50px;
-}
-#and_or {
-	margin-left: 20px;
-	margin-right: 20px;
-	font-size: 30px;
-}
-.instagram_api {
-	float: right;
-}
-
-/* last_section */
-
-.ready-to-launch-container {
-	background-color: $ready-to-launch;
-	border-radius: 6px; 
-	color: $white;
-	padding-bottom: 30px;
-}
-.solid_border {
-	 border: 5px solid #fff;
-	 margin-top: 20px;
-	 margin-left: 60px;
-	 margin-right: 60px;
-	 margin-bottom: 60px;
-	 padding-left: 60px;
-	 padding-right: 60px;
-	 padding-bottom: 60px;
-	 padding-top: 60px;
-}
-.last_section_para {
-	font-size: 30px;
-	text-align: center;
-}
-.uppercase {
-	text-transform: uppercase;
-}
-.btn {
-	margin-left: 140px; 
-	margin-top: 20px;
-}
-.btn-lg {
-	background-color: $heroku-color; 
-	padding: 15px 30px 15px 30px;
-}
-.btn-lg:hover {
-	background-color: $heroku-hover-color; 
-}
-#login {
-	color: $white; 
-	text-decoration: none; 
-	font-size: 40px;
+.centering-content-container {
+	margin: 0 auto;
+	width: 80%;
 }
